2005-04-06	Richard van den Berg  <richard@vdberg.org>
	* Always include aide.h before any other include file
	* Include aide.h instead of config.h to avoid multiple inclusions
	* Fixed large file under Solaris
	* Make large file support generic (not just for Solaris)

2005-04-05	Richard van den Berg  <richard@vdberg.org>
	* Fixed bug where shrinking files with S set where not detected

2005-02-20	Richard van den Berg  <richard@vdberg.org>
	* Removed extra gen_tree() as suggested in patch 985632
	* Allow escaping of spaces in filenames (Virolainen Pablo <pablo@cs.tut.fi>)
	* Allow @@{HOSTNAME} usage in aide.conf (Virolainen Pablo <pablo@cs.tut.fi>)

2004-11-16  Richard van den Berg  <richard@vdberg.org>
	* Applied patch 984424: bug fix for "--check recurses when it shouldn't"
	* Applied patch 853842: sshaide - contributed script

2004-11-12  Richard van den Berg  <richard@vdberg.org>
	* Fixed patch from Virolainen Pablo
	* Applied patch id 931224: Ignoring moved files

2004-11-05  Richard van den Berg  <richard@vdberg.org>
	* Applied patch from Virolainen Pablo to give more infomation when file attributes have changed before calculating the hash

2004-11-04  Richard van den Berg  <richard@vdberg.org>
	* Make sure readdir_r is POSIX compliant before we use it

2004-11-03  Richard van den Berg  <richard@vdberg.org>
	* Applied patch 1058973: Please don't add -I$(prefix)/include
	* Fixed bug 836253: Manual is wrong about --check command
	* Applied fix in config parser to avoid 10000 line limit

2004-11-02  Richard van den Berg  <richard@vdberg.org>
	* Fixed various documentation bugs filed as sf.net

2004-10-29  Richard van den Berg  <richard@vdberg.org>
	* Use syslog() for systems that do not have vsyslog()
	* Fixed file system traversing bug for systems without readdir_r
	* Fixed bug 836257: Line numbers in verbose output off by one

2004-10-28  Richard van den Berg  <richard@vdberg.org>
	* Removed config.h.in