@@ -1,3 +1,6 @@
+2005-04-08	Richard van den Berg  <richard@vdberg.org>
+	* Use configure to define type for storage of file size in aide.db
+
 2005-04-06	Richard van den Berg  <richard@vdberg.org>
 	* Always include aide.h before any other include file
 	* Include aide.h instead of config.h to avoid multiple inclusions
